app/scss/article.scss
.article-tile {
  margin: $spacing 0;
  display: block;
  text-decoration: none;

  &:hover {
    cursor: pointer;

    .title {
      text-decoration: underline;
    }
  }

  .title {
    font-size: $font-large + 4px;
    font-weight: 900;
    font-style: italic;
    text-align: center;
  }

  .author {
    font-size: $font-smallest;
    font-weight: 200;
    color: $gray;
    text-align: center;
  }

  .content {
    font-size: $font-small;
    font-weight: 300;
  }

  .photo {
    width: 100%;
    height: 32em;
    background-position: center;
    margin: $spacing 0;
  }
}

.container.-third .article-tile, .container.-two_third .article-tile, .container.-half .article-tile {
  .title {
    font-size: $font-medium;
    font-weight: 700;
    font-style: normal;
    text-align: left;
  }

  .author {
    text-align: left;
  }

  .photo {
    height: 16em;
  }
}

